# automatic_parking

./: README.md
auto_dock/: CMakeLists.txt  package.xml
auto_dock/include/: auto_dock.h  controller.h  pattern.h
auto_dock/launch/: auto_foxy.launch.py
auto_dock/src/: controller.cpp  pattern.cpp
autodock_controller/: CMakeLists.txt  package.xml
autodock_controller/rviz/: autodock_view.rviz
autodock_controller/src/: controller.cpp  pattern.cpp
autodock_gazebo/: CMakeLists.txt  package.xml
autodock_gazebo/launch/: neuronbot2_dock.launch
autodock_gazebo/world/: dock.model  dock2.model
model/: dock.model
